Fix general page layout on IE11

--- a/app/assets/styles/global/_page.scss
+++ b/app/assets/styles/global/_page.scss
@@ -154,7 +154,7 @@
    ========================================================================== */
 
 .page__body {
-  flex: 1;
+  flex: 1 0 auto;
   display: flex;
   flex-flow: column;
 }
